Use javascript to avoid the addressbar overlapping the app for now
We'll be able to get rid of this again once Chrome supports the dynamic viewport units (dvw/dvh).

--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
     font-family: 'LatoWeb'; font-style: normal; font-weight: bold;
     src: url('fonts/Lato-Bold.woff2') format('woff2'), url('fonts/Lato-Bold.woff') format('woff');
 }
-HTML,BODY { width: 100vw; height: 100vh; /*overflow: hidden;*/ touch-action: none; }
-BODY { margin: 0; font-family: 'Lato', 'LatoWeb', sans-serif; background-color: grey; }
+BODY {
+  width: 100vw; height: 100vh; overflow: hidden; overflow: clip; touch-action: none; margin: 0;
+  background-color: grey; font-family: 'Lato', 'LatoWeb', sans-serif;
+}
 BODY.dragging { cursor: alias; }
 BODY.dragging .note-li { cursor: grabbing; }
 BODY.dragging DIV.sidepanel { cursor: grabbing; }
@@ -30,12 +32,12 @@ H5::first-letter { padding-bottom: 3px; border-bottom: dotted #ccc 1px; }
 :target { border-bottom-color: red; }
 P { margin-top: 0.5rem; }
 BLOCKQUOTE { margin-left: 3px; padding-left: 15px; border-left: solid #ccc 2px; margin-right: 20px; }
-DIV#panels { position: absolute; height: 100vh; width: 100vw; display: flex; overflow: hidden; touch-action: none; background-color: grey; }
+DIV#panels { position: absolute; height: calc(100vh - var(--barheight, 0px)); width: 100vw; display: flex; overflow: hidden; touch-action: none; background-color: grey; }
 DIV.sidepanel { width: 20em; flex-shrink: 0; background-color: rgb(200,200,200); transition: margin 1s; }
 DIV.sidepanel A { text-decoration: none; color: inherit; }
 DIV#panel-left { position: relative; display: flex; flex-direction: column; }
 DIV#panel-right { margin-right: -20rem; }
-DIV#panel-main { position: relative; flex-grow: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; min-width: 252px; max-width: calc(100vw - 68px); }
+DIV#panel-main { position: relative; flex-grow: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; min-width: 252px; max-width: calc(100vw - 68px); }
 DIV.panel-buttons { display: flex; flex-direction: column; background-color: rgb(40,40,40); }
 DIV.panel-buttons > DIV { cursor: pointer; padding: 5px; }
 #button-mode-edit { position: relative; }
